fixed overflow from always to auto

--- a/rucoy-tools/style.css
+++ b/rucoy-tools/style.css
@@ -9,7 +9,7 @@
     border: 2px #e9e9e9 solid;
     box-shadow: 0 0 10px rgba(233,233,233,0.3);
     max-height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 body
